2005-07-28  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange.c 
	(e_cal_backend_exchange_compute_changes_foreach_key) : Fix the callback 
	prototype. Fixes #273975. 
	Patch submitted by prothonotar@tarnation.dyndns.org

2005-07-25  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Bumped the version to 2.3.6
	* NEWS : Updated the file.
	* addressbook/e-book-backend-exchange.c :
	* camel/camel-exchange-folder.c :
	* camel/camel-exchange-store.c :
	* mail/mail-stub-exchange.c :
	* mail/mail-stub.c :
	* storage/exchange-component.c : 
	* storage/exchange-config-listener.c : Removed some unwanted dead code
	and also fixed some warnings for all files.

2005-07-25  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/exchange-component.c (impl_createControls) : Reimplemented.
	But we return NULL bonobo interfaces for now, since we dont need a 
	separate Exchange component anymore.
	* storage/GNOME_Evolution_Exchange_Storage.server.in.in : Use the 
	Evolution/Component bonobo interface for exchange process.

2005-07-25  Arunprakash <arunp@novell.com>

	* camel/camel-exchange-folder.c (refresh_info) : Changed to
	replay the journal and send refresh command only when in 
	online mode.
	(transfer_messages_to) : Changed to make use of the "transfer"
	journal entry instead of "append" journal entry.
	* camel/camel-exchange-journal.c (exchange_entry_free)
	(exchange_entry_load) (exchange_entry_write)
	(exchange_entry_play) : Updated for
	the two new journal entry types - "transfer" and "delete".
	(exchange_entry_play_delete) (exchange_entry_play_transfer) : Added
	newly for the two new journal entries.
	(exchange_entry_play_append) : Fixed the copying of the fake message
	info to the original one. Used camel_exchange_folder_remove_message
	instead of removing internally.
	(camel_exchange_journal_transfer) (camel_exchange_journal_delete) :
	Added newly for creating the journal entries.