@@ -1,3 +1,14 @@
+2005-07-29  Arunprakash <arunp@novell.com>
+
+	* camel/camel-exchange-store.c (exchange_get_folder_info) : Fixed the
+	construction of namespace for building the folder hierarchy. Fixes the
+	bug #310711.
+	(stub_notification) : Changed the events to be emitted to update the
+	folder changes. Fixes #311866.
+	* mail/mail-stub-exchange.c (subscribe_folder) : Added check for non-
+	public hierarchy's folders.
+	(unsubscribe_folder) : Added check for non-favorite hierarchy's folders.
+	
 2005-07-28  Sarfraaz Ahmed <asarfraaz@novell.com>
 
 	* calendar/e-cal-backend-exchange.c 
